--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,5 +4,13 @@
     <string name="app_name">Clime-Lapse</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_home">HomeActivity</string>    
+    <string name="instruction">Take a Picture of Climate or Disaster Around You</string>    
+    <string name="button_camera">Take Picture</string>
+    <string name="album_name">CameraSample</string>
+    <string name="btnIntend">Take (big) Picture</string>
+    <string name="btnIntendS">Take (small) Picture</string>
+    <string name="btnIntendV">Take Video</string>
+    <string name="cannot">Cannot</string>
 
 </resources>
